--- a/Source/portalapp/templates/talks/album_view.html
+++ b/Source/portalapp/templates/talks/album_view.html
@@ -22,24 +22,39 @@
     <div id="gallery-container">
         <div class="row gallery-4-columns isotope clearfix">
            
-            {% include page_template %}
+            {% for photo in pics %}
+            <div class="gallery-item isotope-item issues  col-lg-3 col-md-3 col-sm-3 col-xs-6">
+                <figure>
+                    <a class="zoom swipebox" href="{{photo.image.url}}" title="{{photo.title}}"></a>
+                    <div class="media_container"></div>
+                    <img src="{{photo.image.url}}" alt="{{photo.title}}" width="346px" height="200px">
+                </figure>
+            </div>
+        {% endfor %}
 
-{% block js %}
-    {{ block.super }}
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="{{ STATIC_URL }}endless_pagination/js/endless-pagination.js"></script>
-    <script>
-        $.endlessPaginate({
-            paginateOnScroll: true,
-            paginateOnScrollMargin: 20
-        });
-    </script>
-{% endblock %}
-
-		
+        		
         </div>
 
+
     </div>
+
+
+    <div class="pagination">
+    <span class="step-links">
+        {% if pics.has_previous %}
+            <a href="?page={{ pics.previous_page_number }}">PREVIOUS</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ pics.number }} of {{ pics.paginator.num_pages }}.
+        </span>
+
+        {% if pics.has_next %}
+            <a href="?page={{ pics.next_page_number }}">NEXT</a>
+        {% endif %}
+    </span>
+</div>
+
 
 </div><!-- End of .page-container -->
 
