--- a/Source/portalapp/templates/talks/talk_edit.html
+++ b/Source/portalapp/templates/talks/talk_edit.html
@@ -1,4 +1,14 @@
 {% extends 'talks/base.html' %}
+{% load staticfiles %}
+
+
+{% block extrastyles %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <link href="{% static 'bootstrap/css/bootstrap.css' %}" rel="stylesheet" type="text/css"/>
+    <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
+    {{ form.media }}
+{% endblock %}
+
 {% block content %}
 <!-- .header-bottom-wrapper -->
 <div class="header-bottom-wrapper">
